fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,3 @@ header {
 
 /* HERO SECTION STARTS HERE */
 
-.hero-section {
-    background: blue;
-    height: 200px;
-}
